tests/parser-test-files/define.txt
================================================================================
Unknown type
================================================================================

(package coalton-unit-test/define)

(declare f (unknown -> ufix))
(define (f x) x)

--------------------------------------------------------------------------------

error: Unknown type
  --> test:3:12
   |
 3 |  (declare f (unknown -> ufix))
   |              ^^^^^^^ unknown type UNKNOWN

================================================================================
Duplicate definition
================================================================================

(package coalton-unit-test/duplicate)

(define-type BigType)

(define-struct BigType
  (wow String))

--------------------------------------------------------------------------------

error: Duplicate type definitions
  --> test:3:0
   |
 3 |   (define-type BigType)
   |   ^^^^^^^^^^^^^^^^^^^^^ first definition here
 4 |   
 5 |   (define-struct BigType
   |  _^
 6 | |   (wow String))
   | |_______________^ second definition here
